--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
 }
 .header {
     height: 30rem;
-    background: url('./images/02-hero-bg.jpg') no-repeat center center;
+    background: url('../images/02-hero-bg.jpg') no-repeat center center;
     background-size: 100%;
     object-fit: cover;
 }
